fix(cart): align item price to the right

--- a/packages/ods-react/src/components/cart/src/components/cart-product-group-item/cartProductGroupItem.module.scss
+++ b/packages/ods-react/src/components/cart/src/components/cart-product-group-item/cartProductGroupItem.module.scss
@@ -22,29 +22,33 @@
       }
     }
 
-    &__details {
-      color: var(--ods-theme-heading-text-color);
-      font-size: font.px-to-rem(12px);
-      font-weight: 400;
-    }
+    &__info {
+      flex: 1;
 
-    &__item {
-      display: flex;
-      flex-flow: row;
-      column-gap: var(--ods-theme-column-gap);
-      align-items: center;
-
-      &__label {
-        flex: 1;
-        color: var(--ods-theme-text-color);
-        font-size: font.px-to-rem(14px);
-        font-weight: 600;
+      &__details {
+        color: var(--ods-theme-heading-text-color);
+        font-size: font.px-to-rem(12px);
+        font-weight: 400;
       }
 
-      &__price {
-        color: var(--ods-theme-text-color);
-        font-size: font.px-to-rem(14px);
-        font-weight: 700;
+      &__item {
+        display: flex;
+        flex-flow: row;
+        column-gap: var(--ods-theme-column-gap);
+        align-items: center;
+
+        &__label {
+          flex: 1;
+          color: var(--ods-theme-text-color);
+          font-size: font.px-to-rem(14px);
+          font-weight: 600;
+        }
+
+        &__price {
+          color: var(--ods-theme-text-color);
+          font-size: font.px-to-rem(14px);
+          font-weight: 700;
+        }
       }
     }
 
